manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clae
spec:
  selector:
    matchLabels:
      app: clae
  template:
    metadata:
      labels:
        app: clae
    spec:
      hostNetwork: true
      volumes:
      - name: clae-sqlite
        hostPath:
          path: /data/clae
      containers:
      - name: clae
        imagePullPolicy: Always
        image: ghcr.io/nivenly/clae:main
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 30036
        volumeMounts:
          - mountPath: /sqlite
            name: clae-sqlite
