manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clae-nivenly
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - cla.nivenly.org
    secretName: cla-nivenly-org-tls-prod
  rules:
  - host: cla.nivenly.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clae-nivenly
            port:
              number: 80
